fix: Revert global hiding of `Layout`-level `Alert`s on small screens

--- a/src/scss/Layout.scss
+++ b/src/scss/Layout.scss
@@ -89,10 +89,6 @@
 		transition: left 400ms 0ms ease-in;
 	}
 
-	.Layout__alerts .Alert {
-		display: none;
-	}
-
 	html.menu-is-open .Layout__header {
 		transition-delay: 0ms;
 		pointer-events: none;
